test/parser/should_fail/comments6.souc.bad
import Commens

{;
{; comment {; nested {; comment ;} ;} ;} 
main() = do
    x <- 42 ; a comment
    print x
